--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,6 +6,10 @@
   text-align: left;
 }
 
+.app-container-left {
+  padding: 0 .75rem;
+}
+
 .app-container-right {
   background-color: #e1e4e7;
 }
@@ -26,6 +30,7 @@
   }
 
   .app-container-left {
+    padding: 0;
     display: table-cell;
     height: 100%;
     width: 50%;
@@ -45,7 +50,7 @@
     position: relative;
     width: 100%;
     width: 50%;
-    padding-right: 2rem;
+    padding:0 2rem 0 0;
   }
 
   .app-container-right-inset {
