--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -7,7 +7,7 @@
 }
 
 .app-container-left {
-  padding: 0 0.75rem;
+  padding: 0 .75rem;
 }
 
 .app-container-right {
@@ -15,17 +15,20 @@
 }
 
 @media screen and (min-width: 768px) {
+
   .app {
     position: absolute;
     width: 100%;
     height: 100%;
     padding: 0;
   }
+
   .app-container {
     display: table;
     width: 100%;
     height: 100%;
   }
+
   .app-container-left {
     padding: 0;
     display: table-cell;
@@ -34,23 +37,27 @@
     padding-left: 2rem;
     vertical-align: top;
   }
+
   .app-container-left-inset {
     max-width: 430px;
     margin-left: auto;
     margin-right: 2rem;
     padding-top: 4rem;
   }
+
   .app-container-right {
     display: table-cell;
     position: relative;
     width: 100%;
     width: 50%;
-    padding: 0 2rem 0 0;
+    padding:0 2rem 0 0;
   }
+
   .app-container-right-inset {
     max-width: 430px;
     margin-right: auto;
     margin-left: 2rem;
     padding-top: 4rem;
   }
+
 }
