--- a/src/components/UserForm/UserForm.scss
+++ b/src/components/UserForm/UserForm.scss
@@ -1,24 +1,24 @@
 .uform-header-title {
   border-bottom: 1px solid #9a9a9a;
   color: #b0b8bc;
-  font-size: 0.675rem;
+  font-size: .675rem;
   text-transform: uppercase;
 }
 
 .uform-label {
-  font-size: 0.75rem;
+  font-size: .75rem;
   text-transform: uppercase;
   display: block;
-  margin-bottom: 0.25rem;
+  margin-bottom: .25rem;
 }
 
 .uform-input-block {
-  margin-bottom: 0.75rem;
+  margin-bottom: .75rem;
   vertical-align: top;
 }
 
 .uform-input {
-  padding: 0.5rem;
+  padding: .5rem;
   border: 1px solid #9a9a9a;
   border-radius: 5px;
   width: 100%;
@@ -27,8 +27,8 @@
 
 .uform-invalid-msg {
   font-size: 0.75rem;
-  color: #ff0000;
-  padding: 0.25rem 0 0;
+  color: #FF0000;
+  padding: .25rem 0 0;
 }
 
 .uform-controls {
@@ -36,35 +36,41 @@
 }
 
 .uform-controls-block {
-  margin-bottom: 0.75rem;
+  margin-bottom: .75rem;
   vertical-align: top;
   display: inline-block;
   width: 50%;
 }
 
 .uform-controls > .uform-controls-block:nth-child(odd) {
-  padding: 0 0.75rem 0 0;
+  padding: 0 .75rem 0 0;
 }
 
 .uform-controls > .uform-controls-block:nth-child(even) {
-  padding: 0 0 0 0.75rem;
+  padding: 0 0 0 .75rem;
 }
 
 /* update the layout for bigger screen sizes */
+
 @media screen and (min-width: 768px) {
+
   .uform-fields > .uform-input-block:nth-child(odd) {
-    padding: 0 0.75rem 0 0;
+    padding: 0 .75rem 0 0;
   }
+
   .uform-fields > .uform-input-block:nth-child(even) {
-    padding: 0 0 0 0.75rem;
+    padding: 0 0 0 .75rem;
   }
+
   .uform {
     max-width: 430px;
     margin-left: auto;
     margin-right: 2rem;
   }
+
   .uform-input-block {
     display: inline-block;
     width: 50%;
   }
+
 }
